--- a/shop/pom.xml
+++ b/shop/pom.xml
@@ -2,9 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.my</groupId>
-	<artifactId>demo</artifactId>
-	<name>demo</name>
+	<groupId>com.common</groupId>
+	<artifactId>shop</artifactId>
+	<name>shop</name>
 	<packaging>war</packaging>
 	<version>1.0.0-BUILD-SNAPSHOT</version>
 	<properties>
@@ -13,8 +13,7 @@
 		<org.aspectj-version>1.6.10</org.aspectj-version>
 		<org.slf4j-version>1.6.6</org.slf4j-version>
 	</properties>
-
-
+	
 	<repositories>
 		<repository>
 			<id>oracle</id>
@@ -53,7 +52,6 @@
 		</dependency>
 
 		<!-- ojdbc6 -->
-
 		<dependency>
 			<groupId>com.oracle</groupId>
 			<artifactId>ojdbc6</artifactId>
